stateDiagram-v2
    state "Idle / Esperando" as idle
    state "Turno Activo (Core Loop)" as active_turn {
        state "Buffering\n(Debounce multi-mensaje)" as buffering
        state "Evaluando Estado\ny Contexto (Ontologizador)" as evaluating_context
        state "Redactando Respuesta\n(Conversador)" as drafting_response
        state "Ejecutando Tool\nExterna (Pausa)" as waiting_tool
        state "Punto de Quiebre\n(Context Miss / Fallback)" as breakpoint_miss
    }
    state "Interrumpido\n(Timeout)" as interrupted
    [*] --> idle
    idle --> buffering : mensaje_usuario
    idle --> evaluating_context : trigger_sintetico_cron [proactividad]
    buffering --> buffering : mensaje_adicional
    buffering --> evaluating_context : timeout_buffer [envía_inputs_al_router]
    interrupted --> evaluating_context : mensaje_retoma [inyecta_tiempo_transcurrido]
    evaluating_context --> waiting_tool : requiere_api_externa [ToolAtom inyectado]
    waiting_tool --> evaluating_context : json_api_recibido [inyecta_resultado]
    evaluating_context --> drafting_response : contexto_resuelto [Escenario (ej. Saludo, Q#amp;A) definido en context]
    evaluating_context --> breakpoint_miss : contexto_vacio [fuera de dominio]
    breakpoint_miss --> drafting_response : aplica_fallback [Conversador admite desconocimiento]
    drafting_response --> idle : respuesta_enviada
    idle --> interrupted : inactividad_prolongada